--- a/applications/project.properties
+++ b/applications/project.properties
@@ -20,10 +20,9 @@
 #multiproject properties
 maven.multiproject.includes=\
 */project.xml,\
-daytrader/*/*/project.xml
+daytrader/*/project.xml
 
-maven.multiproject.excludes=\
-daytrader/project.xml
+maven.multiproject.excludes=
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
