Added ActiveCluster jar for WADI
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@355602 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -172,6 +172,7 @@ tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
 tomcat_examples_version=5.5.12-1
 wadi_version=2.0M1
+wadi_activecluster_version=1.2-20051115174934
 wadi_spring_version=1.2.5
 velocity_version=1.4
 wsdl4j_version=1.5.2
