Specs are now under new artifact ids.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355669 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/executable-deployer/project.properties
+++ b/configs/executable-deployer/project.properties
@@ -25,7 +25,7 @@ maven.multiproject.type=car
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car
 
 geronimo.packaging.classPath= \
-    ../lib/geronimo-spec-qname-${geronimo_spec_qname_version}.jar \
+    ../lib/geronimo-qname_${geronimo_spec_qname_version}_spec.jar \
     ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
