--- a/configs/geronimo-gbean-deployer/project.properties
+++ b/configs/geronimo-gbean-deployer/project.properties
@@ -29,7 +29,7 @@ geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_
 
 #following is an experiment
 geronimo.packaging.classPath= \
-    ../lib/geronimo-spec-qname-${geronimo_spec_qname_version}.jar \
+    ../lib/geronimo-qname_${geronimo_spec_qname_version}_spec.jar \
     ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
