--- a/configs/online-deployer/project.properties
+++ b/configs/online-deployer/project.properties
@@ -29,7 +29,7 @@ geronimo.packaging.classPath= \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
     ../lib/geronimo-util-${geronimo_version}.jar \
-    ../lib/geronimo-spec-j2ee-deployment-${geronimo_spec_j2ee_deployment_version}.jar \
+    ../lib/geronimo-j2ee-deployment_${geronimo_spec_j2ee_deployment_version}_spec.jar \
     ../lib/cglib-nodep-${cglib_version}.jar \
     ../lib/commons-cli-${commons_cli_version}.jar \
     ../lib/commons-logging-${commons_logging_version}.jar \
