Updating to TranQL 1.2 from SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@355672 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -82,7 +82,7 @@ activeio_version=2.0-r118
 activemq_version=3.2.1
 geronimo_version=1.0
 openejb_version=2.0
-tranql_version=1.2-SNAPSHOT
+tranql_version=1.2
 tranql_connector_version=1.1-SNAPSHOT
 tranql_vendors_version=1.1-SNAPSHOT
 
