--- a/etc/project.properties
+++ b/etc/project.properties
@@ -83,8 +83,8 @@ activemq_version=3.2.1
 geronimo_version=1.0
 openejb_version=2.0
 tranql_version=1.2
-tranql_connector_version=1.1-SNAPSHOT
-tranql_vendors_version=1.1-SNAPSHOT
+tranql_connector_version=1.1
+tranql_vendors_version=1.1
 
 geronimo_spec_activation_version=1.0
 geronimo_spec_corba_version=1.0
@@ -110,7 +110,7 @@ antlr_version=2.7.2
 apacheds_version=0.9.2
 asm_version=1.4.3
 asn1_version=0.3.2
-axis_version=1.4-SNAPSHOT
+axis_version=1.4-20051205
 castor_version=0.9.5.3
 cglib_version=2.1_3
 commons_beanutils_version=1.6.1
