Updated source and test directories.  "Non-standard" setups should have their directories set in the local pom; it should not be set in the root pom of the Geronimo project.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355816 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/activation/pom.xml
+++ b/modules/activation/pom.xml
@@ -18,4 +18,8 @@
       <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
     </dependency>    
   </dependencies>
+  <build>
+    <sourceDirectory>src/java</sourceDirectory>
+    <testSourceDirectory>src/test</testSourceDirectory>
+  </build>
 </project>
