--- a/sandbox/freeorb/geronimo-orb/pom.xml
+++ b/sandbox/freeorb/geronimo-orb/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -27,27 +27,14 @@
 
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-spec-corba</artifactId>
-      <version>2.3-rc4</version>
+      <artifactId>geronimo-corba_2.3_spec</artifactId>
+      <version>1.0</version>
     </dependency>
         
   </dependencies>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>maven-idlj-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>generate</goal>
-              <goal>generate-test</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
@@ -91,7 +78,6 @@
         <executions>
           <execution>
             <goals>
-              <goal>generate</goal>
               <goal>generate-test</goal>
             </goals>
           </execution>
