Switched the packaging plugin from 1.0-SNAPSHOT to 1.1.0.  Subsequent versions in trunk will be 1.1.1 and 1.1.2, etc.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355922 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -86,6 +86,11 @@ tranql_version=1.2-SNAPSHOT
 tranql_connector_version=1.1-SNAPSHOT
 tranql_vendors_version=1.1-SNAPSHOT
 
+geronimo_packaging_plugin_version=1.1.0
+geronimo_assembly_plugin_version=1.1.0
+geronimo_deployment_plugin_version=1.1.0
+geronimo_dependency_plugin_version=1.1.0
+
 geronimo_spec_activation_version=1.0
 geronimo_spec_corba_version=1.0
 geronimo_spec_ejb_version=1.0
