Switched the deployment and dependency plugins to 1.1.0  (from here they go 1.1.1, 1.1.2, 1.1.3...1.1.N)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355932 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-dependency-plugin/project.properties
+++ b/plugins/geronimo-dependency-plugin/project.properties
@@ -23,6 +23,7 @@ maven.compile.source=1.4
 maven.compile.target=1.4
 
 geronimoVersion=1.0-SNAPSHOT
+geronimo_version=1.0-SNAPSHOT
 
 maven.multiproject.type=plugin
 
