--- a/etc/project.properties
+++ b/etc/project.properties
@@ -82,9 +82,9 @@ activeio_version=2.0-r118
 activemq_version=3.2.1
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
-tranql_version=1.2-SNAPSHOT
-tranql_connector_version=1.1-SNAPSHOT
-tranql_vendors_version=1.1-SNAPSHOT
+tranql_version=1.2.1
+tranql_connector_version=1.1
+tranql_vendors_version=1.1
 
 geronimo_packaging_plugin_version=1.1.0
 geronimo_assembly_plugin_version=1.1.0
