GERONIMO-1331 trunk Correct qname spec jar name  to get QName class back in startup classpath
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355999 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/client-system/project.properties
+++ b/configs/client-system/project.properties
@@ -27,7 +27,7 @@ geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_
 
 
 geronimo.packaging.classPath= \
-    ../lib/geronimo-qname_${geronimo_spec_qname_version}_spec.jar \
+    ../lib/geronimo-qname_1.1_spec-${geronimo_spec_qname_version}.jar \
     ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
