--- a/configs/executable-deployer/project.properties
+++ b/configs/executable-deployer/project.properties
@@ -25,7 +25,7 @@ maven.multiproject.type=car
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car
 
 geronimo.packaging.classPath= \
-    ../lib/geronimo-qname_${geronimo_spec_qname_version}_spec.jar \
+    ../lib/geronimo-qname_1.1_spec-${geronimo_spec_qname_version}.jar \
     ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
