Switched the deployment, dependency, packaging, and assembly plugins over to versioned numbers and no snapshot
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@356052 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-assembly-plugin/project.properties
+++ b/plugins/geronimo-assembly-plugin/project.properties
@@ -23,6 +23,6 @@ maven.compile.source=1.4
 maven.compile.target=1.4
 
 geronimoVersion=1.0
-
+geronimo_version=1.0
 maven.multiproject.type=plugin
 
