--- a/plugins/geronimo-packaging-plugin/project.properties
+++ b/plugins/geronimo-packaging-plugin/project.properties
@@ -26,3 +26,4 @@ maven.repo.remote=http://cvs.apache.org/repository, http://www.ibiblio.org/maven
 
 maven.multiproject.type=plugin
 
+geronimo_version=1.0
