--- a/etc/project.properties
+++ b/etc/project.properties
@@ -86,6 +86,11 @@ tranql_version=1.2.1
 tranql_connector_version=1.1
 tranql_vendors_version=1.1
 
+geronimo_packaging_plugin_version=1.0.0
+geronimo_assembly_plugin_version=1.0.1
+geronimo_deployment_plugin_version=1.0.0
+geronimo_dependency_plugin_version=1.0.0
+
 geronimo_spec_activation_version=1.0
 geronimo_spec_corba_version=1.0
 geronimo_spec_ejb_version=1.0
