--- a/plugins/geronimo-izpack-plugin/project.properties
+++ b/plugins/geronimo-izpack-plugin/project.properties
@@ -24,6 +24,7 @@ maven.compile.source=1.4
 maven.compile.target=1.4
 
 geronimoVersion=1.0
+geronimo_version=1.0
 
 maven.multiproject.type=plugin
 
