Remove unused portlets Fix broken JMS portlets, and remove broken options from others Unbreak the ActiveMQ config Unbreak the Jetty request log
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@356113 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/activemq/project.properties
+++ b/configs/activemq/project.properties
@@ -29,3 +29,4 @@ PlanOpenEJBPort=4201
 PlanServerHostname=localhost
 PlanClientAddresses=127.0.0.1
 PlanRemoteLoginPort=4242
+PlanActiveMQPort=61616
