Updated the axis version to 1.4-356167
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@356182 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -115,7 +115,7 @@ antlr_version=2.7.2
 apacheds_version=0.9.2
 asm_version=1.4.3
 asn1_version=0.3.2
-axis_version=1.4-20051205
+axis_version=1.4-356167
 castor_version=0.9.5.3
 cglib_version=2.1_3
 commons_beanutils_version=1.6.1
