--- a/etc/project.properties
+++ b/etc/project.properties
@@ -18,7 +18,7 @@
 ##
 
 ##
-## $Rev$ $Date$
+## $Rev: 356017 $ $Date$
 ##
 
 #####################################################
@@ -87,7 +87,7 @@ tranql_connector_version=1.1
 tranql_vendors_version=1.1
 
 geronimo_packaging_plugin_version=1.1.0
-geronimo_assembly_plugin_version=1.1.1
+geronimo_assembly_plugin_version=1.1.2
 geronimo_deployment_plugin_version=1.1.0
 geronimo_dependency_plugin_version=1.1.0
 
