Add util module to client-system plan
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@356427 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/client-system/project.properties
+++ b/configs/client-system/project.properties
@@ -31,6 +31,7 @@ geronimo.packaging.classPath= \
     ../lib/geronimo-common-${geronimo_version}.jar \
     ../lib/geronimo-kernel-${geronimo_version}.jar \
     ../lib/geronimo-system-${geronimo_version}.jar \
+    ../lib/geronimo-util-${geronimo_version}.jar \
     ../lib/cglib-nodep-${cglib_version}.jar \
     ../lib/commons-cli-${commons_cli_version}.jar \
     ../lib/commons-logging-${commons_logging_version}.jar \
