Don't build assemblies/j2ee-installer/project.xml
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@358166 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -40,7 +40,8 @@ maven.multiproject.excludes=\
 openejb/modules/connector/project.xml,\
 openejb/modules/webadmin/project.xml,\
 activemq/modules/*/project.xml,\
-sandbox/*/project.xml
+sandbox/*/project.xml,\
+assemblies/j2ee-installer/project.xml
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
