Make j2ee-installer work  + change Geronimo IZPack Plugin to accept the latest release notes version
Thanks Sachin for the idea and patch!


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@360411 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -1,5 +1,3 @@
-
-
 ##
 ##
 ##   Copyright 2003-2004 The Apache Software Foundation
@@ -18,7 +16,7 @@
 ##
 
 ##
-## $Rev: 356017 $ $Date$
+## $Rev$ $Date$
 ##
 
 #####################################################
@@ -85,6 +83,7 @@ openejb_version=2.0-SNAPSHOT
 tranql_version=1.2.1
 tranql_connector_version=1.1
 tranql_vendors_version=1.1
+release_notes_version=1.0
 
 geronimo_packaging_plugin_version=1.1.1
 geronimo_assembly_plugin_version=1.1.2
