Jakob's patch applied. @see http://issues.apache.org/jira/browse/GERONIMO-1164#action_12361517
The changes (copied from Jakob's comment):

 + Moved the deployer-configurable properties from maven.xml to project.properties
 + Changed the geronimo artifact id used in unpackServer from the tomcat distribution to the jetty distribution, as I experienced some problems with the Tomcat distro.
 + Added dependencies for geronimo-javamail-transport-1.0.jar, and added them to the list of jars being copied manually in the unpackServer goal
 + Moved around some of the properties in the configuration of the MailGBean and SMTPTransportGBean. It seems that the SMTPTransportGBean isn't necessary, so I have removed it.

Great job! Thanks Jakob!


git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@365364 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/adventurebuilder/project.properties
+++ b/sandbox/adventurebuilder/project.properties
@@ -17,4 +17,14 @@
 
 ##
 ## $Rev$ $Date$
+
 ab.home=adventure1.0.3
+
+## If you want the application to send mail:
+##  - Set smtpHost to a valid smtp host 
+##  - Set the env entry param/SendMail to true for the bean WorkFlowManagerBean 
+##    in the opc-ejb.jar of opc.ear in the adventure builder application
+smtpHost=mail.eos.dk
+smtpPort=25
+smtpFrom=Adventure Builder &lt;opc@ab.blueprints.sun.com&gt;
+
