--- a/sandbox/adventurebuilder/project.properties
+++ b/sandbox/adventurebuilder/project.properties
@@ -24,7 +24,7 @@ ab.home=adventure1.0.3
 ##  - Set smtpHost to a valid smtp host 
 ##  - Set the env entry param/SendMail to true for the bean WorkFlowManagerBean 
 ##    in the opc-ejb.jar of opc.ear in the adventure builder application
-smtpHost=mail.eos.dk
+smtpHost=SET_VALID_SMTP_HOST
 smtpPort=25
 smtpFrom=Adventure Builder &lt;opc@ab.blueprints.sun.com&gt;
 
