--- a/etc/project.properties
+++ b/etc/project.properties
@@ -28,7 +28,8 @@ http://cvs.apache.org/repository,\
 http://dist.codehaus.org,\
 http://www.mortbay.org/maven,\
 http://www.ibiblio.org/maven,\
-http://people.apache.org/~jgenender/maven
+http://people.apache.org/~jgenender/maven,\
+http://codehaus.org/~jgenender/maven2
 
 maven.remote.group=apcvs
 
@@ -173,9 +174,12 @@ stax_api_version=1.0
 tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
 tomcat_examples_version=5.5.12-1
+backport_util_concurrent_version=2.0_01_pd
 wadi_version=2.0M1
 wadi_activecluster_version=1.2-20051115174934
 wadi_spring_version=1.2.5
+wadi_activemq_version=WADI-3.2
+wadi_axion_version=1.0-M3-dev
 velocity_version=1.4
 wsdl4j_version=1.5.2
 xerces_version=2.6.2
