--- a/configs/system-database/project.properties
+++ b/configs/system-database/project.properties
@@ -21,7 +21,7 @@
 
 maven.multiproject.type=car
 
-geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car
+geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/openejb-deployer/${geronimo_version}/car,geronimo/axis-deployer/${geronimo_version}/car
 
 geronimo.packaging.moduleFile=${maven.repo.local}/tranql/rars/tranql-connector-derby-embed-xa-${tranql_connector_version}.rar
 
