--- a/configs/jsp-examples-tomcat/project.properties
+++ b/configs/jsp-examples-tomcat/project.properties
@@ -21,7 +21,7 @@
 
 maven.multiproject.type=car
 
-geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/tomcat-deployer/${geronimo_version}/car
+geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/tomcat-deployer/${geronimo_version}/car,geronimo/openejb-deployer/${geronimo_version}/car,geronimo/axis-deployer/${geronimo_version}/car
 
 geronimo.packaging.moduleFile=${maven.repo.local}/geronimo-samples/wars/geronimo-jsp-examples-tomcat-${tomcat_examples_version}.war
 
