--- a/configs/openejb/project.properties
+++ b/configs/openejb/project.properties
@@ -21,7 +21,12 @@
 
 maven.multiproject.type=car
 
-geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/jetty-deployer/${geronimo_version}/car,geronimo/openejb-deployer/${geronimo_version}/car,geronimo/axis-deployer/${geronimo_version}/car
+# just use basic GBean deployer
+geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car
 
-geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-welcome-${geronimo_version}.war
-
+PlanHTTPPort=8080
+PlanHTTPSPort=8443
+PlanOpenEJBPort=4201
+PlanServerHostname=localhost
+PlanClientAddresses=127.0.0.1
+PlanRemoteLoginPort=4242
