We need to set the host and port of the RemoteEJBReferenceBuilder.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@367590 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/openejb-deployer/project.properties
+++ b/configs/openejb-deployer/project.properties
@@ -23,3 +23,6 @@ maven.multiproject.type=car
 
 # just use basic GBean deployer
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car
+
+PlanOpenEJBPort=4201
+PlanServerHostname=localhost
