GERONIMO-1457 fix some plugin version problems
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@368332 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-packaging-plugin/project.properties
+++ b/plugins/geronimo-packaging-plugin/project.properties
@@ -25,4 +25,5 @@ maven.compile.target=1.4
 maven.repo.remote=http://cvs.apache.org/repository, http://www.ibiblio.org/maven
 
 maven.multiproject.type=plugin
+geronimo_version=1.1-SNAPSHOT
 
