--- a/pom.xml
+++ b/pom.xml
@@ -66,18 +66,6 @@
     </mailingList>
   </mailingLists>
 
-  <developers>
-    <developer>
-      <id>adc</id>
-      <name>Alan D. Cabrera</name>
-      <roles>
-        <role>Commiter</role>
-        <role>PMC</role>
-      </roles>
-      <timezone>-8</timezone>
-    </developer>
-  </developers>
-  
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -373,7 +361,9 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-one-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
         <executions>
           <execution>
             <configuration>
@@ -404,6 +394,14 @@
       <id>Apache CVS</id>
       <name>Apache CVS of the Central Repository</name>
       <url>http://cvs.apache.org/maven-snapshot-repository</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <name>Maven Central Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
     </repository>
   </repositories>
 
