Geronimo-1466 1.0.1 Branch Update
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@368994 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-packaging-plugin/plugin.properties
+++ b/plugins/geronimo-packaging-plugin/plugin.properties
@@ -19,7 +19,7 @@
 ## $Rev$ $Date$
 ##
 
-geronimo.packaging.geronimo_version=1.0
+geronimo.packaging.geronimo_version=1.0.1-SNAPSHOT
 
 geronimo.packaging.srcDir=${basedir}/src/plan
 geronimo.packaging.planFile=plan.xml
