--- a/etc/project.properties
+++ b/etc/project.properties
@@ -80,16 +80,16 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 #####################################################
 activeio_version=2.0-r118
 activemq_version=3.2.1
-geronimo_version=1.0
+geronimo_version=1.0.1-SNAPSHOT
 openejb_version=2.0
 tranql_version=1.2.1
 tranql_connector_version=1.1
 tranql_vendors_version=1.1
 
-geronimo_packaging_plugin_version=1.0.1
-geronimo_assembly_plugin_version=1.0.3
-geronimo_deployment_plugin_version=1.0.0
-geronimo_dependency_plugin_version=1.0.0
+geronimo_packaging_plugin_version=1.0.2
+geronimo_assembly_plugin_version=1.0.4
+geronimo_deployment_plugin_version=1.0.1
+geronimo_dependency_plugin_version=1.0.1
 
 geronimo_spec_activation_version=1.0
 geronimo_spec_corba_version=1.0
@@ -135,6 +135,7 @@ commons_modeler_version=1.1
 commons_primitives_version=20041207.202534
 commons_pool_version=1.2
 concurrent_version=1.3.4
+daytrader_version=1.0
 derby_version=10.1.1.0
 dom4j_version=1.4
 dwr_version=1.0
@@ -147,7 +148,7 @@ javacc_version=2.1
 jdbm_version=0.20-dev
 jdom_version=1.0
 jelly_velocity_tags_version=1.0
-jetty_version=5.1.9
+jetty_version=5.1.10
 jstl_version=1.1.1
 juddi_version=0.9rc4
 junit_version=3.8.1
