--- a/plugins/geronimo-assembly-plugin/project.properties
+++ b/plugins/geronimo-assembly-plugin/project.properties
@@ -22,7 +22,7 @@
 maven.compile.source=1.4
 maven.compile.target=1.4
 
-geronimoVersion=1.0
-geronimo_version=1.0
+geronimoVersion=1.0.1-SNAPSHOT
+geronimo_version=1.0.1-SNAPSHOT
 maven.multiproject.type=plugin
 
