--- a/plugins/geronimo-deployment-plugin/plugin.properties
+++ b/plugins/geronimo-deployment-plugin/plugin.properties
@@ -21,5 +21,5 @@
 
 geronimoGroupId=geronimo
 geronimoArtifactId=geronimo
-geronimoVersion=1.0
+geronimoVersion=1.0.1-SNAPSHOT
 geronimo.deploy.var.source=src/var
