GERONIMO-1447 fix config names in plans
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@369125 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/client-corba/project.properties
+++ b/configs/client-corba/project.properties
@@ -23,6 +23,11 @@ maven.multiproject.type=car
 
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car
 
+PlanCOSNamingHost=localhost
+PlanCOSNamingPort=1050
+PlanORBSSLHost=localhost
+PlanORBSSLPort=2001
+
 PlanHTTPPort=8080
 PlanHTTPSPort=8443
 PlanOpenEJBPort=4201
