GERONIMO-1466 update to use openejb 2.0.1-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@369136 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -81,10 +81,11 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 activeio_version=2.0-r118
 activemq_version=3.2.1
 geronimo_version=1.0.1-SNAPSHOT
-openejb_version=2.0
+openejb_version=2.0.1-SNAPSHOT
 tranql_version=1.2.1
 tranql_connector_version=1.1
 tranql_vendors_version=1.1
+release_notes_version=1.0
 
 geronimo_packaging_plugin_version=1.0.2
 geronimo_assembly_plugin_version=1.0.4
