Additional changes to remove hardcoded dependencies
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@369684 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/daytrader/streamer/project.properties
+++ b/applications/daytrader/streamer/project.properties
@@ -1,2 +1,2 @@
 maven.multiproject.type=jar
-maven.jar.manifest=src/client/META-INF/MANIFEST.MF
+maven.jar.manifest=${maven.build.dir}/tmp/MANIFEST.MF
