--- a/applications/daytrader/wsappclient/project.properties
+++ b/applications/daytrader/wsappclient/project.properties
@@ -1,2 +1,2 @@
 maven.multiproject.type=jar
-maven.jar.manifest=src/client/META-INF/MANIFEST.MF
+maven.jar.manifest=${maven.build.dir}/tmp/MANIFEST.MF
