--- a/project.properties
+++ b/project.properties
@@ -30,6 +30,7 @@ maven.remote.group=apcvs
 maven.multiproject.includes=\
 plugins/*/project.xml,\
 applications/*/project.xml,\
+applications/daytrader/*/project.xml,\
 modules/*/project.xml,\
 #configs/*/project.xml,\
 #assemblies/*/project.xml,\
