Updated Daytrader to not have hardcoded dependencies
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@370034 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/daytrader/web/src/webapp/WEB-INF/web.xml
+++ b/applications/daytrader/web/src/webapp/WEB-INF/web.xml
@@ -410,13 +410,13 @@
          <message-destination-ref-name>jms/TradeBrokerQueue</message-destination-ref-name>
          <message-destination-type>javax.jms.Queue</message-destination-type>
          <message-destination-usage>Produces</message-destination-usage>
-         <message-destination-link>daytrader-ejb-1.1-SNAPSHOT.jar#TradeBrokerQueue</message-destination-link>
+         <message-destination-link>daytrader-ejb-${daytrader_version}.jar#TradeBrokerQueue</message-destination-link>
       </message-destination-ref>
       <message-destination-ref id="MessageDestinationRef_2">
          <message-destination-ref-name>jms/TradeStreamerTopic</message-destination-ref-name>
          <message-destination-type>javax.jms.Topic</message-destination-type>
          <message-destination-usage>Produces</message-destination-usage>
-         <message-destination-link>daytrader-ejb-1.1-SNAPSHOT.jar#TradeStreamerTopic</message-destination-link>
+         <message-destination-link>daytrader-ejb-${daytrader_version}.jar#TradeStreamerTopic</message-destination-link>
       </message-destination-ref>
       <service-ref>
         <description>WSDL Service Trade</description>
