Updated configs to disassociate daytrader version from geronimo
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@370035 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -134,6 +134,7 @@ commons_modeler_version=1.1
 commons_primitives_version=20041207.202534
 commons_pool_version=1.2
 concurrent_version=1.3.4
+daytrader_version=1.1-SNAPSHOT
 derby_version=10.1.1.0
 dom4j_version=1.4
 dwr_version=1.0
