Fix cross-site scripting problems in samples
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@373179 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/servlets-examples-jetty/project.properties
+++ b/configs/servlets-examples-jetty/project.properties
@@ -23,5 +23,5 @@ maven.multiproject.type=car
 
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/jetty-deployer/${geronimo_version}/car
 
-geronimo.packaging.moduleFile=${maven.repo.local}/geronimo-samples/wars/geronimo-servlet-examples-tomcat-${tomcat_examples_version}.war
+geronimo.packaging.moduleFile=${maven.repo.local}/geronimo-samples/wars/geronimo-servlet-examples-tomcat-${tomcat_servlet_examples_version}.war
 
