--- a/etc/project.properties
+++ b/etc/project.properties
@@ -173,7 +173,8 @@ stax_version=1.1.1-dev
 stax_api_version=1.0
 tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
-tomcat_examples_version=5.5.12-1
+tomcat_servlet_examples_version=5.5.15
+tomcat_jsp_examples_version=5.5.15
 backport_util_concurrent_version=2.0_01_pd
 wadi_version=2.0M1
 wadi_activecluster_version=1.2-20051115174934
