--- a/etc/project.properties
+++ b/etc/project.properties
@@ -80,7 +80,7 @@ activeio_version=2.0-r118
 activemq_version=3.2.1
 geronimo_version=1.1-SNAPSHOT
 openejb_version=2.1-SNAPSHOT
-tranql_version=1.2.1
+tranql_version=1.3-SNAPSHOT
 tranql_connector_version=1.1
 tranql_vendors_version=1.1
 release_notes_version=1.0
