--- a/project.properties
+++ b/project.properties
@@ -22,7 +22,7 @@ geronimo.cvs.docdir = ../incubator-site/build/site/projects/geronimo
 
 #module.excludes=axis
 #maven.test.failure.ignore=true
-maven.test.skip=true
+#maven.test.skip=true
 maven.itest.skip=true
 maven.remote.group=apcvs
 
