GERONIMO-1569 Improve packaging plugin logging
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@374191 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/geronimo-packaging-plugin/plugin.properties
+++ b/plugins/geronimo-packaging-plugin/plugin.properties
@@ -37,3 +37,4 @@ geronimo.packaging.storeName=*:j2eeType=ConfigurationStore,*
 geronimo.packaging.protocol=rmi://${geronimo.packaging.hostname}/jndi/rmi
 geronimo.packaging.sap=/JMXConnector
 geronimo.packaging.url=service:jmx:${geronimo.packaging.protocol}:${geronimo.packaging.sap}
+geronimo.packaging.logLevel=WARN
