Geronimo-1489 Minor fixes to JUDDI JSP application
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@374278 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/uddi-server/src/webapp/WEB-INF/web.xml
+++ b/applications/uddi-server/src/webapp/WEB-INF/web.xml
@@ -23,6 +23,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
+    <!-- Welcome File List -->
+    <welcome-file-list>
+        <welcome-file>happyjuddi.jsp</welcome-file>
+    </welcome-file-list>
+
     <!--
       This Servlet is used to create, initialize and cleanup
       resources used by jUDDI. It ABSOLUTELY MUST be loaded first.
