Fix for relative links in jmxdebug on Tomcat
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@374665 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/jmxdebug/src/webapp/WEB-INF/web.xml
+++ b/applications/jmxdebug/src/webapp/WEB-INF/web.xml
@@ -20,22 +20,22 @@
             <param-name>charset</param-name>
             <param-value>UTF-8</param-value>
         </init-param>
-		<init-param>
-			<param-name>form-encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>container-encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
+        <init-param>
+            <param-name>form-encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+           <param-name>container-encoding</param-name>
+           <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>Debug</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
