Some new classes: Artifact and Environment, and EnvironmentBuilder.  Modified ServiceConfigBuilder, and some of DeploymentContext. Some schemas partially modified for new elements.  New code compiles but not new schemas.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/configid@374958 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -34,12 +34,12 @@ applications/daytrader/*/project.xml,\
 modules/*/project.xml,\
 #configs/*/project.xml,\
 #assemblies/*/project.xml,\
-openejb/modules/*/project.xml,\
+openejb/openejb2/modules/*/project.xml,\
 tranql/*/project.xml
 
 maven.multiproject.excludes=\
-openejb/modules/connector/project.xml,\
-openejb/modules/webadmin/project.xml,\
+openejb/openejb2/modules/connector/project.xml,\
+openejb/openejb2/modules/webadmin/project.xml,\
 activemq/modules/*/project.xml,\
 sandbox/*/project.xml
 
