Update specs versions
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@374972 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -90,24 +90,24 @@ geronimo_assembly_plugin_version=1.1.7
 geronimo_deployment_plugin_version=1.1.1
 geronimo_dependency_plugin_version=1.1.1
 
-geronimo_spec_activation_version=1.1-SNAPSHOT
+geronimo_spec_activation_version=1.0
 geronimo_spec_corba_version=1.1-SNAPSHOT
-geronimo_spec_ejb_version=1.1-SNAPSHOT
+geronimo_spec_ejb_version=1.0
 geronimo_spec_j2ee_version=1.1-SNAPSHOT
-geronimo_spec_j2ee_connector_version=1.1-SNAPSHOT
-geronimo_spec_j2ee_deployment_version=1.1-SNAPSHOT
-geronimo_spec_j2ee_jacc_version=1.1-SNAPSHOT
-geronimo_spec_j2ee_management_version=1.1-SNAPSHOT
+geronimo_spec_j2ee_connector_version=1.0
+geronimo_spec_j2ee_deployment_version=1.0
+geronimo_spec_j2ee_jacc_version=1.0
+geronimo_spec_j2ee_management_version=1.0
 geronimo_spec_javamail_version=1.1-SNAPSHOT
-geronimo_spec_jaxr_version=1.1-SNAPSHOT
-geronimo_spec_jaxrpc_version=1.1-SNAPSHOT
-geronimo_spec_jcache_version=1.1-SNAPSHOT
-geronimo_spec_jms_version=1.1-SNAPSHOT
-geronimo_spec_jsp_version=1.1-SNAPSHOT
-geronimo_spec_jta_version=1.1-SNAPSHOT
-geronimo_spec_qname_version=1.1-SNAPSHOT
-geronimo_spec_saaj_version=1.1-SNAPSHOT
-geronimo_spec_servlet_version=1.1-SNAPSHOT
+geronimo_spec_jaxr_version=1.0
+geronimo_spec_jaxrpc_version=1.0
+geronimo_spec_jcache_version=1.0
+geronimo_spec_jms_version=1.0
+geronimo_spec_jsp_version=1.0
+geronimo_spec_jta_version=1.0
+geronimo_spec_qname_version=1.0
+geronimo_spec_saaj_version=1.0
+geronimo_spec_servlet_version=1.0
 
 ant_version=1.6.5
 antlr_version=2.7.2
