Changed openejb checkout to checkout configid branch of openejb Fixed multiproject includes to reference correct location in openejb checkout
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/configid@377601 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -32,16 +32,12 @@ plugins/*/project.xml,\
 applications/*/project.xml,\
 applications/daytrader/*/project.xml,\
 modules/*/project.xml,\
-#configs/*/project.xml,\
-#assemblies/*/project.xml,\
-openejb/openejb2/modules/*/project.xml,\
+openejb/modules/*/project.xml,\
 tranql/*/project.xml
 
 maven.multiproject.excludes=\
-openejb/openejb2/modules/connector/project.xml,\
-openejb/openejb2/modules/webadmin/project.xml,\
-activemq/modules/*/project.xml,\
-sandbox/*/project.xml
+openejb/modules/connector/project.xml,\
+openejb/modules/webadmin/project.xml
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
