--- a/modules/kernel/pom.xml
+++ b/modules/kernel/pom.xml
@@ -16,32 +16,61 @@
     limitations under the License.
 -->
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.geronimo</groupId>
     <artifactId>geronimo</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>geronimo-activation</artifactId>
-  <name>Geronimo :: Activation</name>
+  <groupId>org.apache.geronimo</groupId>
+  <artifactId>geronimo-kernel</artifactId>
   <version>${geronimoVersion}</version>
-  
+  <packaging>jar</packaging>
+  <name>Geronimo :: Kernel</name>
+
   <build>
     <resources>
       <resource>
-        <directory>src/resources</directory>
+        <directory>${basedir}/src</directory>
+        <includes>
+          <include>META-INF/**/*.*</include>
+        </includes>
       </resource>
     </resources>
   </build>
-  
   <dependencies>
+    <!-- Module Dependencies -->
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-activation_1.0.2_spec</artifactId>
+      <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
-    </dependency>    
+      <artifactId>geronimo-j2ee-deployment_1.1_spec</artifactId>
+    </dependency>
+
+    <!-- Thirdparty -->
+
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mx4j</groupId>
+      <artifactId>mx4j</artifactId>
+    </dependency>
   </dependencies>
+
 </project>
